<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">Udacity Android Nanodegree</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="app1">Spotify Streamer</string>
    <string name="app2">Super Duo</string>
    <string name="app3">Build It Bigger</string>
    <string name="app4">XYZ Reader</string>
    <string name="app5">Capstone: TBD</string>

</resources>
