<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".Main"
                android:background="#ff558b2f">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/Title"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:phoneNumber="false"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp">

        <Button
            style="@style/Main_Botton"
            android:text="@string/app1"
            android:id="@+id/button_spodify"/>

        <Button
            style="@style/Main_Botton"
            android:text="@string/app2"
            android:id="@+id/button_superDuo"/>

        <Button
            style="@style/Main_Botton"
            android:text="@string/app3"
            android:id="@+id/button_buildItBigger"/>

        <Button
            style="@style/Main_Botton"
            android:text="@string/app4"
            android:id="@+id/button_XYZReader"/>

        <Button
            style="@style/Main_Botton"
            android:text="@string/app5"
            android:id="@+id/button_capstone"/>

    </LinearLayout>
</RelativeLayout>
